--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   bloc: ^8.1.0
   cupertino_icons: ^1.0.2
   equatable: ^2.0.5
+  liquid_progress_indicator: ^0.4.0
   flutter:
     sdk: flutter
   flutter_bloc: ^8.1.1
